# CGBEmulator

./: .gitignore  CMakeLists.txt  README.md
CGBEmulator/: constants.c  constants.h  debug_functions.c  debug_functions.h  debug_strings.c  debug_strings.h  decoder.c  decoder.h  executor.c  executor.h  flag_helpers.c  flag_helpers.h  game_loop.c  game_loop.h  instruction.c  instruction.h  lcd.c  lcd.h  main.c  main_memory.c  main_memory.h  main_registers.c  main_registers.h  processor.c  processor.h
CGBEmulator.xcodeproj/: project.pbxproj
CGBEmulator.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CGBEmulator.xcodeproj/xcuserdata/peterfetros.xcuserdatad/xcschemes/: CGBEmulator.xcscheme  xcschememanagement.plist
